# Aarav_BlueStampPortfolio

./: .gitignore  Dockerfile  Gemfile  README.md  _config.yml  index.md
_includes/: head-custom.html
_sass/: jekyll-theme-cayman.scss
_site/: feed.xml  index.md
_site/assets/css/: style.css  style.css.map
app/: app.py  bluetooth_gui.py
assets/css/: styles.scss
src/: README.md  bluetooth.h  main.cpp  pedometer.h
tools/: README.md  batterycase.py  batterycase.scad  batterycase.stl  clipthing.py  filter.py  graph.py  hexconv.py  log.txt  molle_clip_2.stl  notes_output.txt  printgui.py  printvis.py  scadview.py  showorientation.py  spring_clip.scad  spring_clip.stl  stl_parser.py  test_model.scad  test_model.stl
tools/anim/: CMakeLists.txt  README.md  main.cpp
